--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,20 @@
-{
+	{
   "dependencies": {
-    "mongoose": "^6.0.14"
-  }
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.14",
+    "nodemon": "^2.0.15"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Gymkhana Website of IITI",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "Web Team SG",
+  "license": "ISC"
 }
