--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
@@ -13,8 +15,9 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-loadingg": "^1.7.2",
     "react-material-ui-carousel": "^3.1.1",
@@ -23,7 +26,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.3",
+    "typescript": "^4.5.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
