--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.1",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -9,7 +10,8 @@
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "nodemon server.js"
