--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-loadingg": "^1.7.2",
+    "react-lottie": "^1.2.3",
     "react-material-ui-carousel": "^3.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
