--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start" :"node server.js"
   },
   "name": "server",
   "version": "1.0.0",
