--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "passport": "^0.5.2",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "process": "^0.11.10"
   },
   "scripts": {
