--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
