--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "session-file-store": "^1.5.0"
   },
   "scripts": {
     "start": "nodemon server.js"
