--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "hamburger-react": "^2.4.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
