--- a/client/src/config.prod.json
+++ b/client/src/config.prod.json
@@ -3,5 +3,6 @@
     "CONTENT_URL" :  "https://gymkhana-iiti.herokuapp.com/content",
     "IMG_UPLOAD_URL" : "https://gymkhana-iiti.herokuapp.com/uploadImage",
     "LOGIN_URL" : "https://gymkhana-iiti.herokuapp.com/auth/googlelogin",
-    "VERIFY_URL" : "https://gymkhana-iiti.herokuapp.com/auth/jwtverify"
+    "VERIFY_URL" : "https://gymkhana-iiti.herokuapp.com/auth/jwtverify",
+    "TESTING" : false
 }
