Add jwt middleware function

--- a/client/src/config.prod.json
+++ b/client/src/config.prod.json
@@ -4,5 +4,5 @@
     "IMG_UPLOAD_URL" : "https://gymkhana-iiti.herokuapp.com/uploadImage",
     "LOGIN_URL" : "https://gymkhana-iiti.herokuapp.com/auth/googlelogin",
     "VERIFY_URL" : "https://gymkhana-iiti.herokuapp.com/auth/jwtverify",
-    "TESTING" : false
+    "PUBLIC_GET_URL" : "https://gymkhana-iiti.herokuapp.com/public"
 }
