--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-image-crop": "^9.0.5",
