--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.4",
@@ -17,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "hamburger-react": "^2.4.1",
     "js-cookie": "^3.0.1",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-bootstrap-icons": "^1.7.2",
@@ -25,7 +31,7 @@
     "react-image-crop": "^9.0.5",
     "react-loadingg": "^1.7.2",
     "react-lottie": "^1.2.3",
-    "react-material-ui-carousel": "^3.1.1",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
