--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "fortawesome": "^0.0.1-security",
     "hamburger-react": "^2.4.1",
     "js-cookie": "^3.0.1",
     "particles-bg": "^2.5.5",
