--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "fortawesome": "^0.0.1-security",
     "hamburger-react": "^2.4.1",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
