--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "process": "^0.11.10",
     "session-file-store": "^1.5.0"
   },
+  "type": "module",
   "scripts": {
     "start": "nodemon server.js"
   },
